--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "mocha": "mocha",
     "develop": "mocha --watch",
-    "lint": "tslint src/*.ts test/*.ts",
+    "lint": "npm-run-all --parallel lint:*",
+    "lint:ts": "ts-npm-lint",
+    "lint:src": "tslint src/*.ts test/*.ts",
     "compile": "tsc",
     "test": "npm-run-all compile lint mocha"
   },
   "author": "",
+  "typings": "lib/index",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
     "immutable": "^3.8.1",
     "mocha": "^2.5.3",
     "redux-actions": "^0.9.1",
+    "ts-npm-lint": "^0.1.0",
     "tslint": "^3.10.2",
     "typescript": "^1.8.10",
     "typings": "^1.0.4"
