--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "files": [
       "src/index.ts",
+      "src/__test__/DagHistory.spec.ts",
       "typings/index.d.ts"
     ],
     "compileOnSave": true,
