--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "compile": "tsc",
     "test": "npm-run-all compile lint mocha",
     "watch:mocha": "npm run mocha -- --watch",
-    "watch:ts": "npm run tsc -- -w",
-    "develop": "npm-run-all watch:*"
+    "watch:ts": "tsc -w",
+    "develop": "npm-run-all --parallel watch:*"
   },
   "author": "",
   "typings": "lib/index",
@@ -23,6 +23,7 @@
     "mocha": "^2.5.3",
     "npm-run-all": "^2.1.2",
     "redux-actions": "^0.10.0",
+    "treeify": "^1.0.1",
     "ts-npm-lint": "^0.1.0",
     "tslint": "^3.11.0",
     "typescript": "^1.8.10",
