--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "author": "",
   "typings": "lib/index",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
     "immutable": "^3.8.1",
