--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "installtypes": "typings install",
     "mocha": "istanbul cover _mocha",
     "lint:ts": "ts-npm-lint --fix-typings",
     "lint:src": "tslint src/*.ts test/*.ts",
     "lint": "npm-run-all --parallel lint:*",
     "compile": "tsc",
-    "test": "npm-run-all installtypes compile lint mocha",
+    "test": "npm-run-all compile lint mocha",
     "watch:mocha": "npm run mocha -- --watch",
     "watch:ts": "tsc -w",
     "develop": "npm-run-all --parallel watch:*",
@@ -28,8 +27,7 @@
     "ts-node": "^1.3.0",
     "ts-npm-lint": "^0.1.0",
     "tslint": "^3.11.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.2.0"
+    "typescript": "^2.0.0"
   },
   "dependencies": {
     "debug": "^2.2.0",
