--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "typings": "lib/index",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^3.4.33",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.40",
+    "@types/redux-actions": "^0.8.30",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^2.5.3",
@@ -31,8 +35,8 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "redux-actions": "^0.10.0",
     "immutable": "^3.8.1",
+    "redux-actions": "^0.10.0",
     "treeify": "^1.0.1"
   }
 }
