PR 1142: Merge experiment/duplicate-state-detection to master
 - Add GetExistingState Function
 - Add Existing State Detection
 - Parameterize the State Shape
 - Correct an Issue Where State was Being Immutabilized

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "mocha": "istanbul cover _mocha",
     "lint:ts": "ts-npm-lint --fix-typings",
-    "lint:src": "tslint src/*.ts test/*.ts",
+    "lint:src": "tslint src/**/*.ts test/*.ts",
     "lint": "npm-run-all --parallel lint:*",
     "compile": "tsc",
     "test": "npm-run-all compile lint mocha",
