Update TS Config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "outDir": "lib/"
+        "outDir": "lib/",
+        "lib": [
+          "es2017",
+          "dom"
+        ]
     },
     "exclude": [
         "node_modules"
