--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "mocha": "istanbul cover _mocha",
+    "mocha": "mocha",
+    "mocha:coverage": "nyc ./node_modules/.bin/_mocha",
     "lint:ts": "ts-npm-lint --fix-typings",
     "lint:src": "tslint src/**/*.ts test/*.ts",
     "lint": "npm-run-all --parallel lint:*",
     "compile": "tsc",
-    "test": "npm-run-all compile lint mocha",
+    "test": "npm-run-all compile lint mocha:coverage",
     "watch:mocha": "npm run mocha -- --watch",
     "watch:ts": "tsc -w",
     "develop": "npm-run-all --parallel watch:*",
@@ -23,9 +24,9 @@
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
     "mocha": "^2.5.3",
     "npm-run-all": "^2.1.2",
+    "nyc": "^10.0.0",
     "ts-node": "^1.3.0",
     "ts-npm-lint": "^0.1.0",
     "tslint": "^3.11.0",
@@ -37,5 +38,29 @@
     "immutable": "^3.8.1",
     "redux-actions": "^0.10.0",
     "treeify": "^1.0.1"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx"
+    ],
+    "exclude": [
+      "node_modules/",
+      "lib/",
+      "stories/"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
   }
 }
