--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "mocha": "^2.5.3",
+    "mocha-junit-reporter": "^1.12.1",
+    "mocha-multi": "^0.9.1",
     "npm-run-all": "^2.1.2",
     "nyc": "^10.0.0",
     "ts-node": "^1.3.0",
