--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-dag-history",
+  "name": "@essex/redux-dag-history",
   "version": "1.6.0",
   "description": "",
   "main": "index.js",
@@ -36,7 +36,7 @@
     "nyc": "^10.0.0",
     "ts-node": "^1.3.0",
     "ts-npm-lint": "^0.1.0",
-    "typescript": "^2.1.4-insiders.20161206",
+    "typescript": "^2.1.4",
     "typescript-eslint-parser": "^1.0.0"
   },
   "dependencies": {
