--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "mocha": "mocha",
-    "mocha:coverage": "nyc ./node_modules/.bin/_mocha",
+    "jest": "jest",
+    "jest:coverage": "jest --coverage",
     "lint:ts": "ts-npm-lint --fix-typings",
     "lint:src": "eslint src/**/*.ts test/*.ts",
     "lint": "npm-run-all --parallel lint:*",
     "compile": "tsc",
-    "test": "npm-run-all compile lint mocha:coverage",
-    "watch:mocha": "npm run mocha -- --watch",
+    "test": "npm-run-all compile lint jest:coverage",
+    "watch:jest": "jest --watch",
     "watch:ts": "tsc -w",
     "develop": "npm-run-all --parallel watch:*",
     "start": "npm run develop"
@@ -21,53 +21,38 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^3.4.33",
-    "@types/mocha": "^2.2.32",
+    "@types/jest": "^18.1.1",
     "@types/node": "^6.0.40",
     "chai": "^3.5.0",
-    "eslint": "^3.11.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.8.0",
-    "mocha": "^2.5.3",
-    "mocha-junit-reporter": "^1.12.1",
-    "mocha-multi": "^0.9.1",
-    "npm-run-all": "^2.1.2",
-    "nyc": "^10.0.0",
-    "ts-node": "^1.3.0",
+    "jest": "^18.1.0",
+    "npm-run-all": "^4.0.1",
+    "ts-node": "^2.0.0",
     "ts-npm-lint": "^0.1.0",
-    "typescript": "^2.1.4",
-    "typescript-eslint-parser": "^1.0.0"
+    "typescript": "^2.1.5",
+    "typescript-eslint-parser": "^1.0.2"
   },
   "dependencies": {
-    "@types/redux-actions": "^0.8.30",
-    "debug": "^2.2.0",
+    "@types/redux-actions": "^1.2.2",
+    "debug": "^2.6.0",
     "immutable": "^3.8.1",
-    "redux-actions": "^0.10.0",
+    "redux-actions": "^1.2.1",
     "treeify": "^1.0.1"
   },
-  "nyc": {
-    "include": [
-      "src/**/*.ts",
-      "src/**/*.tsx"
+  "jest": {
+    "collectCoverageFrom": "src/**/*.ts",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
     ],
-    "exclude": [
-      "node_modules/",
-      "lib/",
-      "stories/"
-    ],
-    "extension": [
-      ".ts",
-      ".tsx"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "text-summary",
-      "html"
-    ],
-    "sourceMap": true,
-    "instrument": true
+    "transform": {
+      "^.+\\.(ts|tsx)$": "<rootDir>/scripts/preprocessor.js"
+    },
+    "testRegex": "test/.*\\.spec\\.(ts|tsx|js)$"
   }
 }
