--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,15 @@
-*~
-__test__
-src
-wallaby.conf.js
-typings/
 .editorconfig
-tsconfig.json
-typings.json
+.eslintrc
+.npmignore
+.gitignore
+.travis.yml
+.vscode/
+src/
 coverage/
 test/
 scripts/
-.nyc_output/
-.vscode/
-test-results.xml
-circle.yml
-.npmignore
-.eslintrc
+__test__
+wallaby.conf.js
+tsconfig.json
+yarn.lock
+*~
