Remove state pinning from redux-dag-history; add it to dag-history component's state modeling

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "jest": "jest",
     "jest:watch": "jest --watch",
     "jest:coverage": "jest --coverage",
-    "packages:test": "env PATH=$PATH:./node_modules/.bin lerna run test",
-    "packages:start": "env PATH=$PATH:./node_modules/.bin lerna run start",
-    "packages:build": "env PATH=$PATH:./node_modules/.bin lerna run build",
-    "packages:clean": "env PATH=$PATH:./node_modules/.bin lerna run clean",
+    "lerna": "env PATH=$PATH:./node_modules/.bin lerna",
+    "lerna:exec": "env PATH=$PATH:./node_modules/.bin lerna exec",
+    "lerna:run": "env PATH=$PATH:./node_modules/.bin lerna run",
+    "start:middleware": "npm run lerna:exec -- --scope @essex/redux-dag-history -- npm run start",
+    "start:component": "npm run lerna:exec -- --scope @essex/dag-history-component -- npm run start",
+    "packages:test": "npm run lerna:run -- test",
+    "packages:build": "npm run lerna:run -- build",
+    "packages:clean": "npm run lerna:run -- clean",
     "test": "npm-run-all packages:clean lint packages:build jest:coverage",
-    "start": "npm run packages:start"
+    "start": "npm-run-all --parallel start:*"
   },
   "dependencies": {
     "@kadira/storybook": "^2.35.3",
@@ -38,9 +42,12 @@
     "filesaver.js": "^0.2.0",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.0",
+    "jest": "^18.1.0",
     "json-loader": "^0.5.4",
+    "lerna": "^2.0.0-beta.37",
+    "linklocal": "^2.8.0",
     "node-sass": "^4.5.0",
-    "nyc": "^10.1.2",
+    "npm-run-all": "^4.0.1",
     "postcss-loader": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dnd-html5-backend": "^2.2.3",
@@ -59,6 +66,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "@types/classnames": "^0.0.32",
+    "@types/node": "^7.0.5",
+    "@types/jest": "^18.1.1",
     "@types/react": "^15.0.8",
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dnd": "^2.0.32",
@@ -77,17 +86,9 @@
     "react-tabs": "^0.8.2",
     "redux": "^3.3.1",
     "redux-actions": "^1.2.1",
-    "immutable": "^3.8.1",
-    "treeify": "^1.0.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^18.1.1",
-    "@types/node": "^7.0.5",
-    "jest": "^18.1.0",
-    "lerna": "^2.0.0-beta.37",
-    "linklocal": "^2.8.0",
-    "npm-run-all": "^4.0.1",
     "rimraf": "^2.5.4",
+    "immutable": "^3.8.1",
+    "treeify": "^1.0.1",
     "tslint": "^4.4.2",
     "typescript": "^2.1.6"
   },
