--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -39,7 +39,6 @@
     "classnames": "^2.2.5",
     "debug": "^2.6.0",
     "lodash": "^4.17.4",
-    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dnd": "^2.2.3",
     "react-icons": "^2.2.3",
@@ -49,5 +48,8 @@
     "react-tabs": "^0.8.2",
     "redux": "^3.3.1",
     "redux-actions": "^1.2.1"
+  },
+  "peerDependencies": {
+    "react": "^15.4.2"
   }
 }
