Update the Dag History so that the initial state is empty.
* Instead of explicitly modeling an empty state, we're leaving the initial state empty, and clients can generate new states as the app progresses.
* We are updating the type of StateId and BranchId to be KeyType (string).
* Stringifying hash values for the StateKey generator.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "**/.DS_Store": true,
     "**/*~": true,
     "**/#*": true,
-    "lib": true,
+    "**/lib/": true,
     "coverage": true,
     "storybook-static": true
   },
