--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "lerna exec --concurrency=1 -- yarn && lerna exec --concurrency=99 -- linklocal",
+    "postinstall": "lerna bootstrap",
     "lint": "tslint 'packages/*/{src,test}/**/*.ts*'",
     "jest": "jest",
     "jest:watch": "jest --watch",
@@ -56,8 +56,7 @@
     "imports-loader": "^0.7.0",
     "jest": "^18.1.0",
     "json-loader": "^0.5.4",
-    "lerna": "^2.0.0-beta.37",
-    "linklocal": "^2.8.0",
+    "lerna": "^2.0.0-beta.38",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.1",
     "postcss-loader": "^1.2.2",
