--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -4,17 +4,17 @@
   "description": "A React Component for Dag-History Visualization",
   "main": "lib/index.js",
   "scripts": {
-    "clean": "rimraf lib/ storybook-static/",
-    "serve:webpack": "webpack-dev-server --host 0.0.0.0 --hot --inline --history-api-fallback",
-    "serve:storybook": "start-storybook -p 6006",
-    "build:tsc": "tsc",
-    "build:sass": "node-sass src/daghistory.scss --output lib",
-    "build:assets": "cpx 'src/**/*.scss' lib",
-    "build:storybook": "build-storybook",
-    "build": "npm-run-all --parallel 'build:*'",
+    "clean": "../../node_modules/.bin/rimraf lib/ storybook-static/",
+    "serve:webpack": "../../node_modules/.bin/webpack-dev-server --host 0.0.0.0 --hot --inline --history-api-fallback",
+    "serve:storybook": " ../../node_modules/.bin/start-storybook -p 6006",
+    "build:tsc": "../../node_modules/.bin/tsc",
+    "build:sass": "../../node_modules/.bin/node-sass src/daghistory.scss --output lib",
+    "build:assets": "../../node_modules/.bin/cpx 'src/**/*.scss' lib",
+    "build:storybook": "../../node_modules/.bin/build-storybook",
+    "build": "../../node_modules/.bin/npm-run-all --parallel 'build:*'",
     "watch:sass": "npm run build:sass -- --watch",
     "watch:copysass": "npm run build:assets -- --watch",
-    "watch:tsc": "tsc -w",
+    "watch:tsc": "../../node_modules/.bin/tsc -w",
     "start": "npm-run-all --parallel 'serve:*' 'watch:*'"
   },
   "author": "Chris Trevino <chris.trevino@atsid.com>",
