--- a/packages/redux-dag-history/package.json
+++ b/packages/redux-dag-history/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf lib",
-    "build": "tsc",
-    "start": "tsc -w"
+    "clean": "../../node_modules/.bin/rimraf lib",
+    "build": "../../node_modules/.bin/tsc",
+    "start": "../../node_modules/.bin/tsc -w"
   },
   "author": "Chris Trevino <darthtrevino@gmail.com>",
   "typings": "lib/index",
