Remove env hoisting

--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "jest": "jest",
     "jest:watch": "jest --watch",
     "jest:coverage": "jest --coverage",
-    "lerna": "env PATH=$PATH:./node_modules/.bin lerna",
-    "lerna:exec": "env PATH=$PATH:./node_modules/.bin lerna exec",
-    "lerna:run": "env PATH=$PATH:./node_modules/.bin lerna run",
-    "start:middleware": "npm run lerna:exec -- --scope @essex/redux-dag-history -- npm run start",
-    "start:component": "npm run lerna:exec -- --scope @essex/dag-history-component -- npm run start",
-    "packages:test": "npm run lerna:run -- test --stream",
-    "packages:build": "npm run lerna:run -- build --stream",
-    "packages:clean": "npm run lerna:run -- clean",
+    "start:middleware": "lerna exec --scope @essex/redux-dag-history -- npm run start",
+    "start:component": "lerna exec --scope @essex/dag-history-component -- npm run start",
+    "packages:test": "lerna run test --stream",
+    "packages:build": "lerna run build --stream",
+    "packages:clean": "lerna run clean",
     "test": "npm-run-all packages:clean lint packages:build jest:coverage",
     "start": "npm-run-all --parallel start:*"
   },
