--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "lerna exec --concurrency=1 -- yarn && lerna exec --concurrency=99 -- linklocal",
+    "postinstall": "lerna bootstrap",
     "lint": "tslint 'packages/*/{src,test}/**/*.ts*'",
     "jest": "jest",
     "jest:watch": "jest --watch",
     "jest:coverage": "jest --coverage",
-    "lerna": "env PATH=$PATH:./node_modules/.bin lerna",
-    "lerna:exec": "env PATH=$PATH:./node_modules/.bin lerna exec",
-    "lerna:run": "env PATH=$PATH:./node_modules/.bin lerna run",
-    "start:middleware": "npm run lerna:exec -- --scope @essex/redux-dag-history -- npm run start",
-    "start:component": "npm run lerna:exec -- --scope @essex/dag-history-component -- npm run start",
-    "packages:test": "npm run lerna:run -- test",
-    "packages:build": "npm run lerna:run -- build",
-    "packages:clean": "npm run lerna:run -- clean",
+    "start:middleware": "lerna exec --scope @essex/redux-dag-history -- npm run start",
+    "start:component": "lerna exec --scope @essex/dag-history-component -- npm run start",
+    "packages:test": "lerna run test --stream",
+    "packages:build": "lerna run build --stream",
+    "packages:clean": "lerna run clean",
     "test": "npm-run-all packages:clean lint packages:build jest:coverage",
     "start": "npm-run-all --parallel start:*"
   },
@@ -56,8 +53,7 @@
     "imports-loader": "^0.7.0",
     "jest": "^18.1.0",
     "json-loader": "^0.5.4",
-    "lerna": "^2.0.0-beta.37",
-    "linklocal": "^2.8.0",
+    "lerna": "^2.0.0-beta.38",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.1",
     "postcss-loader": "^1.2.2",
