--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -1,61 +1,57 @@
 {
-  "name": "@essex/dag-history-component",
-  "version": "3.0.0",
-  "description": "A React Component for Dag-History Visualization",
-  "main": "lib/index.js",
-  "scripts": {
-    "clean": "rimraf lib/ storybook-static/",
-    "serve:webpack": "../../node_modules/.bin/webpack-dev-server --host 0.0.0.0 --hot --inline --history-api-fallback",
-    "serve:storybook": "start-storybook -p 6006",
-    "build:tsc": "tsc",
-    "build:sass": "node-sass src/daghistory.scss --output lib",
-    "build:assets": "cpx 'src/**/*.scss' lib",
-    "build:storybook": "build-storybook",
-    "build": "run-p build:*",
-    "watch:sass": "npm run build:sass -- --watch",
-    "watch:copysass": "npm run build:assets -- --watch",
-    "watch:tsc": "tsc -w",
-    "start": "run-p serve:* watch:*"
-  },
-  "license": "MIT",
-  "files": [
-    "package.json",
-    "README.md",
-    "LICENSE",
-    "lib/"
-  ],
-  "devDependencies": {
-    "@storybook/react": "^3.3.12",
-    "cpx": "^1.5.0",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
-    "rimraf": "^2.6.2",
-    "typescript": "^2.7.1"
-  },
-  "dependencies": {
-    "@essex/redux-dag-history": "^5.0.0",
-    "@types/classnames": "^0.0.32",
-    "@types/react": "^15.0.8",
-    "@types/react-addons-css-transition-group": "^15.0.1",
-    "@types/react-dnd": "^2.0.32",
-    "@types/react-redux": "^4.4.36",
-    "@types/react-tabs": "^0.5.22",
-    "@types/redux": "^3.6.31",
-    "@types/redux-actions": "^1.2.2",
-    "classnames": "^2.2.5",
-    "debug": "^2.6.0",
-    "lodash": "^4.17.4",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-dnd": "^2.2.3",
-    "react-icons": "^2.2.3",
-    "react-keydown": "^1.6.2",
-    "react-redux": "^5.0.2",
-    "react-simple-dropdown": "^1.1.4",
-    "react-tabs": "^0.8.2",
-    "redux": "^3.3.1",
-    "redux-actions": "^1.2.1"
-  },
-  "peerDependencies": {
-    "react": "^15.4.2"
-  }
+	"name": "@essex/dag-history-component",
+	"version": "3.0.0",
+	"description": "A React Component for Dag-History Visualization",
+	"main": "lib/index.js",
+	"scripts": {
+		"clean": "rimraf lib/ storybook-static/",
+		"serve:storybook": "start-storybook -p 6006",
+		"build:tsc": "tsc",
+		"build:sass": "node-sass src/daghistory.scss --output lib",
+		"build:assets": "cpx 'src/**/*.scss' lib",
+		"build:storybook": "build-storybook",
+		"build": "run-p build:*",
+		"watch:sass": "npm run build:sass -- --watch",
+		"watch:copysass": "npm run build:assets -- --watch",
+		"watch:tsc": "tsc -w",
+		"start": "run-p serve:* watch:*"
+	},
+	"license": "MIT",
+	"files": ["package.json", "README.md", "LICENSE", "lib/"],
+	"devDependencies": {
+		"@storybook/react": "^3.3.12",
+		"cpx": "^1.5.0",
+		"node-sass": "^4.7.2",
+		"npm-run-all": "^4.1.2",
+		"rimraf": "^2.6.2",
+		"typescript": "^2.7.1"
+	},
+	"dependencies": {
+		"@essex/redux-dag-history": "^5.0.0",
+		"@types/classnames": "^2.2.3",
+		"@types/react": "^16.0.36",
+		"@types/react-addons-css-transition-group": "^15.0.3",
+		"@types/react-dnd": "^2.0.34",
+		"@types/react-dom": "^16.0.3",
+		"@types/react-redux": "^5.0.14",
+		"@types/react-tabs": "^1.0.3",
+		"@types/redux": "^3.6.31",
+		"@types/redux-actions": "^2.2.3",
+		"classnames": "^2.2.5",
+		"debug": "^3.1.0",
+		"lodash": "^4.17.5",
+		"react-addons-css-transition-group": "^15.6.2",
+		"react-dnd": "^2.5.4",
+		"react-dom": "^16.2.0",
+		"react-icons": "^2.2.7",
+		"react-keydown": "^1.9.6",
+		"react-redux": "^5.0.6",
+		"react-simple-dropdown": "^3.2.0",
+		"react-tabs": "^2.2.1",
+		"redux": "^3.7.2",
+		"redux-actions": "^2.2.1"
+	},
+	"peerDependencies": {
+		"react": "*"
+	}
 }
