--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -17,12 +17,19 @@
 		"start": "run-p serve:* watch:*"
 	},
 	"license": "MIT",
-	"files": ["package.json", "README.md", "LICENSE", "lib/"],
+	"files": [
+		"package.json",
+		"README.md",
+		"LICENSE",
+		"lib/"
+	],
 	"devDependencies": {
 		"@storybook/react": "^3.3.12",
 		"cpx": "^1.5.0",
 		"node-sass": "^4.7.2",
 		"npm-run-all": "^4.1.2",
+		"react-dnd-html5-backend": "^2.5.4",
+		"redux-thunk": "^2.2.0",
 		"rimraf": "^2.6.2",
 		"typescript": "^2.7.1"
 	},
@@ -30,17 +37,17 @@
 		"@essex/redux-dag-history": "^5.0.0",
 		"@types/classnames": "^2.2.3",
 		"@types/react": "^16.0.36",
-		"@types/react-addons-css-transition-group": "^15.0.3",
 		"@types/react-dnd": "^2.0.34",
 		"@types/react-dom": "^16.0.3",
 		"@types/react-redux": "^5.0.14",
 		"@types/react-tabs": "^1.0.3",
+		"@types/react-transition-group": "^2.0.6",
 		"@types/redux": "^3.6.31",
 		"@types/redux-actions": "^2.2.3",
 		"classnames": "^2.2.5",
 		"debug": "^3.1.0",
 		"lodash": "^4.17.5",
-		"react-addons-css-transition-group": "^15.6.2",
+		"react": "^16.2.0",
 		"react-dnd": "^2.5.4",
 		"react-dom": "^16.2.0",
 		"react-icons": "^2.2.7",
@@ -48,10 +55,8 @@
 		"react-redux": "^5.0.6",
 		"react-simple-dropdown": "^3.2.0",
 		"react-tabs": "^2.2.1",
+		"react-transition-group": "^2.2.1",
 		"redux": "^3.7.2",
 		"redux-actions": "^2.2.1"
-	},
-	"peerDependencies": {
-		"react": "*"
 	}
 }
