--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -25,12 +25,18 @@
 	],
 	"devDependencies": {
 		"@storybook/react": "^3.3.12",
+		"@types/bluebird": "^3.5.20",
+		"@types/enzyme": "^3.1.8",
+		"@types/sinon": "^4.1.3",
+		"bluebird": "^3.5.1",
 		"cpx": "^1.5.0",
+		"enzyme": "^3.3.0",
 		"node-sass": "^4.7.2",
 		"npm-run-all": "^4.1.2",
 		"react-dnd-html5-backend": "^2.5.4",
 		"redux-thunk": "^2.2.0",
 		"rimraf": "^2.6.2",
+		"sinon": "^4.2.2",
 		"typescript": "^2.7.1"
 	},
 	"dependencies": {
