--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -8,7 +8,7 @@
 		"serve:storybook": "start-storybook -p 6006",
 		"build:tsc": "tsc",
 		"build:sass": "node-sass src/daghistory.scss --output lib",
-		"build:assets": "cpx 'src/**/*.scss' lib",
+		"build:assets": "cpx 'src/**/*.scss' ./lib",
 		"build:storybook": "build-storybook",
 		"build": "run-p build:*",
 		"watch:sass": "npm run build:sass -- --watch",
@@ -17,12 +17,7 @@
 		"start": "run-p serve:* watch:*"
 	},
 	"license": "MIT",
-	"files": [
-		"package.json",
-		"README.md",
-		"LICENSE",
-		"lib/"
-	],
+	"files": ["package.json", "README.md", "LICENSE", "lib/"],
 	"devDependencies": {
 		"@storybook/react": "^3.3.12",
 		"@types/bluebird": "^3.5.20",
