--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,28 +1,56 @@
 {
-  "name": "@essex/dag-history-component-example",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --hot --inline --history-api-fallback"
-  },
-  "license": "MIT",
-  "files": [
-    "package.json",
-    "README.md",
-    "LICENSE",
-    "lib/"
-  ],
-  "devDependencies": {
-    "css-loader": "^0.28.9",
-    "exports-loader": "^0.7.0",
-    "imports-loader": "^0.7.1",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "ts-loader": "^3.4.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "dependencies": {}
+	"name": "@essex/dag-history-component-example",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"start": "webpack-dev-server --host 0.0.0.0 --inline --history-api-fallback"
+	},
+	"license": "MIT",
+	"files": [
+		"package.json",
+		"README.md",
+		"LICENSE",
+		"src/"
+	],
+	"devDependencies": {
+		"css-loader": "^0.28.9",
+		"exports-loader": "^0.7.0",
+		"imports-loader": "^0.7.1",
+		"node-sass": "^4.7.2",
+		"postcss-loader": "^2.1.0",
+		"sass-loader": "^6.0.6",
+		"style-loader": "^0.20.1",
+		"ts-loader": "^3.4.0",
+		"typescript": "^2.7.1",
+		"webpack": "^3.10.0",
+		"webpack-dev-server": "^2.11.1"
+	},
+	"dependencies": {
+		"@essex/dag-history-component": "*",
+		"@essex/redux-dag-history": "*",
+		"@types/file-saver": "^1.3.0",
+		"@types/lodash": "^4.14.102",
+		"@types/react": "^16.0.36",
+		"@types/react-dom": "^16.0.3",
+		"@types/react-redux": "^5.0.14",
+		"@types/react-router": "^4.0.21",
+		"@types/react-router-redux": "^5.0.11",
+		"@types/redux": "^3.6.0",
+		"@types/redux-actions": "^2.2.3",
+		"@types/redux-thunk": "^2.1.0",
+		"debug": "^3.1.0",
+		"file-saver": "^1.3.3",
+		"lodash": "^4.17.5",
+		"react": "^16.2.0",
+		"react-dnd": "^2.5.4",
+		"react-dnd-html5-backend": "^2.5.4",
+		"react-dom": "^16.2.0",
+		"react-redux": "^5.0.6",
+		"react-router": "^4.2.0",
+		"react-router-redux": "^4.0.8",
+		"redux": "^3.7.2",
+		"redux-actions": "^2.2.1",
+		"redux-thunk": "^2.2.0",
+		"skeleton-css": "^2.0.4"
+	}
 }
