--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"//precommit": "lint-staged",
-		"prepush": "yarn lint",
+		"//": "TODO: Re-enable pre-push script ",
+		"precommit": "lint-staged",
+		"//prepush": "yarn lint",
 		"prettify": "prettier \"packages/*/**/*.{js,jsx,ts,tsx}\"",
 		"lint": "tslint 'packages/*/{src,test}/**/*.ts*'",
 		"jest": "jest",
