--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -5,30 +5,34 @@
 	"main": "lib/index.js",
 	"scripts": {
 		"clean": "rimraf lib/ storybook-static/",
-		"serve:storybook": "start-storybook -p 6006",
+		"start:storybook": "start-storybook -p 6006",
+		"start:tsc": "tsc -w",
+		"start": "run-p start:*",
 		"build:tsc": "tsc",
-		"build:sass": "node-sass src/daghistory.scss --output lib",
-		"build:assets": "cpx 'src/**/*.scss' ./lib",
 		"build:storybook": "build-storybook",
-		"build": "run-p build:*",
-		"watch:sass": "npm run build:sass -- --watch",
-		"watch:copysass": "npm run build:assets -- --watch",
-		"watch:tsc": "tsc -w",
-		"start": "run-p serve:* watch:*"
+		"build": "run-p build:*"
 	},
 	"license": "MIT",
-	"files": ["package.json", "README.md", "LICENSE", "lib/"],
+	"files": [
+		"package.json",
+		"README.md",
+		"LICENSE",
+		"lib/"
+	],
 	"devDependencies": {
+		"@storybook/addon-actions": "^3.3.12",
 		"@storybook/react": "^3.3.12",
 		"@types/bluebird": "^3.5.20",
 		"@types/enzyme": "^3.1.8",
+		"@types/redux-logger": "^3.0.5",
 		"@types/sinon": "^4.1.3",
+		"@types/storybook__react": "^3.0.6",
 		"bluebird": "^3.5.1",
-		"cpx": "^1.5.0",
 		"enzyme": "^3.3.0",
-		"node-sass": "^4.7.2",
+		"immutable": "^3.8.2",
 		"npm-run-all": "^4.1.2",
 		"react-dnd-html5-backend": "^2.5.4",
+		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.2.0",
 		"rimraf": "^2.6.2",
 		"sinon": "^4.2.2",
@@ -58,6 +62,7 @@
 		"react-tabs": "^2.2.1",
 		"react-transition-group": "^2.2.1",
 		"redux": "^3.7.2",
-		"redux-actions": "^2.2.1"
+		"redux-actions": "^2.2.1",
+		"styled-components": "^3.1.6"
 	}
 }
