--- a/packages/dag-history-component/tsconfig.json
+++ b/packages/dag-history-component/tsconfig.json
@@ -1,14 +1,15 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "es2015",
 		"jsx": "react",
-		"target": "es5",
+		"target": "es2015",
+		"moduleResolution": "node",
 		"noImplicitAny": false,
 		"sourceMap": false,
 		"experimentalDecorators": true,
 		"declaration": true,
 		"outDir": "lib",
-		"lib": ["esnext", "dom", "es2016.array.include"]
+		"lib": ["es2015", "dom", "es2016.array.include"]
 	},
 	"files": ["src/index.ts"]
 }
