--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@essex/dag-history-component-example",
+	"name": "@essex/dag-history-example",
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
@@ -19,8 +19,8 @@
 		"webpack-dev-server": "^2.11.1"
 	},
 	"dependencies": {
-		"@essex/dag-history-component": "*",
-		"@essex/redux-dag-history": "*",
+		"@essex/dag-history-component": "^3.0.0",
+		"@essex/redux-dag-history": "^5.0.0",
 		"@types/file-saver": "^1.3.0",
 		"@types/lodash": "^4.14.102",
 		"@types/react": "^16.0.36",
