--- a/packages/example/tsconfig.json
+++ b/packages/example/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "es2015",
 		"jsx": "react",
-		"target": "es5",
+		"target": "es2015",
 		"noImplicitAny": false,
 		"sourceMap": false,
 		"experimentalDecorators": true,
