--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "jsx": "react",
-        "moduleResolution": "node",
-        "isolatedModules": false,
-        "experimentalDecorators": true,
-        "noImplicitAny": true,
-        "noImplicitUseStrict": false,
-        "noLib": false,
-        "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "noEmit": true,
-        "lib": [
-          "es2017",
-          "dom"
-        ]
-    },
-    "exclude": [
-        "node_modules"
-    ],
-    "compileOnSave": true,
-    "buildOnSave": false,
-    "atom": {
-        "rewriteTsconfig": false
-    }
+	"compilerOptions": {
+		"target": "es2015",
+		"module": "es2015",
+		"jsx": "react",
+		"moduleResolution": "node",
+		"isolatedModules": false,
+		"experimentalDecorators": true,
+		"noImplicitAny": true,
+		"noImplicitUseStrict": false,
+		"noLib": false,
+		"preserveConstEnums": true,
+		"suppressImplicitAnyIndexErrors": true,
+		"noEmit": true,
+		"lib": ["es2017", "dom"]
+	},
+	"exclude": ["node_modules"],
+	"compileOnSave": true,
+	"buildOnSave": false,
+	"atom": {
+		"rewriteTsconfig": false
+	}
 }
