--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -9,16 +9,11 @@
 		"start:tsc": "tsc -w",
 		"start": "run-p start:*",
 		"build:tsc": "tsc",
-		"build:storybook": "build-storybook",
+		"//build:storybook": "build-storybook",
 		"build": "run-p build:*"
 	},
 	"license": "MIT",
-	"files": [
-		"package.json",
-		"README.md",
-		"LICENSE",
-		"lib/"
-	],
+	"files": ["package.json", "README.md", "LICENSE", "lib/"],
 	"devDependencies": {
 		"@storybook/addon-actions": "^3.3.12",
 		"@storybook/react": "^3.3.12",
