--- a/packages/redux-dag-history/tsconfig.json
+++ b/packages/redux-dag-history/tsconfig.json
@@ -1,27 +1,9 @@
 {
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"target": "es2015",
-		"module": "es2015",
-		"moduleResolution": "node",
-		"isolatedModules": false,
+		"outDir": "lib",
 		"declaration": true,
-		"strict": true,
-		"noUnusedLocals": true,
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"noImplicitUseStrict": false,
-		"removeComments": true,
-		"noLib": false,
-		"preserveConstEnums": true,
-		"suppressImplicitAnyIndexErrors": true,
-		"outDir": "lib/",
-		"lib": ["es2017", "dom"]
+		"noEmit": false
 	},
-	"exclude": ["node_modules"],
-	"files": ["src/index.ts"],
-	"compileOnSave": true,
-	"buildOnSave": false,
-	"atom": {
-		"rewriteTsconfig": false
-	}
+	"files": ["src/index.ts"]
 }
