--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,17 @@
 		"target": "es2015",
 		"module": "es2015",
 		"jsx": "react",
-		"moduleResolution": "node",
-		"isolatedModules": false,
-		"experimentalDecorators": true,
-		"noImplicitAny": true,
-		"noImplicitUseStrict": false,
-		"noLib": false,
-		"preserveConstEnums": true,
-		"suppressImplicitAnyIndexErrors": true,
 		"noEmit": true,
-		"lib": ["es2017", "dom"]
-	},
-	"exclude": ["node_modules"],
-	"compileOnSave": true,
-	"buildOnSave": false,
-	"atom": {
-		"rewriteTsconfig": false
+		"moduleResolution": "node",
+		"experimentalDecorators": true,
+		"lib": ["esnext", "dom"],
+		// TODO: Enable this piecemeal eventually
+		// "strict": true,
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"alwaysStrict": true,
+		"strictPropertyInitialization": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": false
 	}
 }
