--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -13,17 +13,24 @@
 		"build": "run-p build:*"
 	},
 	"license": "MIT",
-	"files": ["package.json", "README.md", "LICENSE", "lib/"],
+	"files": [
+		"package.json",
+		"README.md",
+		"LICENSE",
+		"lib/"
+	],
 	"devDependencies": {
 		"@storybook/addon-actions": "^3.3.12",
 		"@storybook/react": "^3.3.12",
 		"@types/bluebird": "^3.5.20",
 		"@types/enzyme": "^3.1.8",
+		"@types/enzyme-adapter-react-16": "^1.0.1",
 		"@types/redux-logger": "^3.0.5",
 		"@types/sinon": "^4.1.3",
 		"@types/storybook__react": "^3.0.6",
 		"bluebird": "^3.5.1",
 		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
 		"immutable": "^3.8.2",
 		"npm-run-all": "^4.1.2",
 		"react-dnd-html5-backend": "^2.5.4",
