--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -13,6 +13,7 @@
 		"src/"
 	],
 	"devDependencies": {
+		"circular-dependency-plugin": "^4.4.0",
 		"css-loader": "^0.28.9",
 		"exports-loader": "^0.7.0",
 		"imports-loader": "^0.7.1",
