--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"compilerOptions": {
 		"target": "es2015",
-		"module": "es2015",
 		"jsx": "react",
+		// TODO: When we can get jest to work well w/ JS files that use ESM we can set this to es2015
+		"module": "commonjs",
 		"noEmit": true,
 		"moduleResolution": "node",
 		"experimentalDecorators": true,
