--- a/packages/dag-history-component/package.json
+++ b/packages/dag-history-component/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@essex/dag-history-component",
-	"version": "3.0.1",
+	"version": "3.0.2",
 	"description": "A React Component for Dag-History Visualization",
 	"main": "lib/index.js",
 	"scripts": {
@@ -13,7 +13,12 @@
 		"build": "run-p build:*"
 	},
 	"license": "MIT",
-	"files": ["package.json", "README.md", "LICENSE", "lib/"],
+	"files": [
+		"package.json",
+		"README.md",
+		"LICENSE",
+		"lib/"
+	],
 	"devDependencies": {
 		"@storybook/addon-actions": "^3.3.12",
 		"@storybook/react": "^3.3.12",
